--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,8 +25,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'com.lorentzos.swipecards:library:1.0.8@aar'
 }
