--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,7 +12,12 @@ android {
         versionName "1.0"
     }
 
-    repositories { mavenCentral() }
+    repositories {
+        mavenCentral()
+        flatDir {
+            dirs 'libs'
+        }
+    }
 
 
     buildTypes {
@@ -30,5 +35,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.loopj.android:android-async-http:1.4.5'
-    compile 'com.lorentzos.swipecards:library:1.0.8@aar'
+    compile(name:'android-card-stack-0.1.0', ext:'aar')
 }
